--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>      
         <nav>
-            <a href="">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -28,7 +28,7 @@
         <!-- hero -->
         <section>
             <h1>Effective Solutions for Your Business</h1>
-            <button class="button">Order Service</button>
+            <button type="button">Order Service</button>
         </section>
 
         <!-- our feature -->
@@ -56,11 +56,11 @@
 
         <!-- what are we doing -->
         <section>
-            <h2>Whar Are We Doing</h2>
+            <h2>What are we doing</h2>
             <ul>
-                <li><img src="./images/img_1.jpg" alt="photos of our works"></li>
-                <li><img src="./images/img_3.jpg" alt="photos of our works"></li>
-                <li><img src="./images/img_2.jpg" alt="photos of our works"></li>
+                <li><img src="./images/img_1.jpg" alt="photos of our works" width="360" height="300"></li>
+                <li><img src="./images/img_3.jpg" alt="photos of our works" width="360" height="300"></li>
+                <li><img src="./images/img_2.jpg" alt="photos of our works" width="360" height="300"></li>
             </ul>
         </section>
 
@@ -69,23 +69,23 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/product_designer.jpg" alt="Product Designer">
-                    <p>Mark Guerrero</p>
+                    <img src="./images/product_designer.jpg" alt="Product Designer" width="264" height="260">
+                    <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/frontend_developer.jpg" alt="Frontend Developer">
-                    <p>Tom Ford</p>
+                    <img src="./images/frontend_developer.jpg" alt="Frontend Developer" width="264" height="260">
+                    <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/marketing.jpg" alt="Marketing">
-                    <p>Camila Garcia</p>
+                    <img src="./images/marketing.jpg" alt="Marketing" width="264" height="260">
+                    <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/ui_designer.jpg" alt="UI Designer">
-                    <p>Daniel Wilson</p>
+                    <img src="./images/ui_designer.jpg" alt="UI Designer" width="264" height="260">
+                    <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
@@ -94,7 +94,7 @@
     </main>
 
     <footer>
-        <a href="">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
